ref: update requiremtns

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-# Add the following requirements
-uvicorn[standard]
-fastapi==0.111.0
+streamlit
 openai
-pydantic>=2.0, <3
+pydantic
 python-dotenv
